--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "body-parser": "^1.18.1",
     "bootstrap-css-only": "^4.0.0",
     "express": "^4.15.4",
+    "filestack-react": "^1.3.8",
     "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.7",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "^1.8.2",
