--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-css-only": "^4.0.0",
     "express": "^4.15.4",
     "filestack-react": "^1.3.8",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.7",
